--- a/styles.css
+++ b/styles.css
@@ -144,7 +144,8 @@ body {
     text-align: center; 
     font-family: 'Trebuchet MS', sans-serif;
     background-color:lightgray;
-    padding: 5px; 
+    padding: 5px;
+    height: 100vh;
 }
 
 .contact_me {
