--- a/styles.css
+++ b/styles.css
@@ -145,7 +145,7 @@ body {
     font-family: 'Trebuchet MS', sans-serif;
     background-color:lightgray;
     padding: 5px;
-    height: 100vh;
+    height: 100%;
 }
 
 .contact_me {
