--- a/styles.css
+++ b/styles.css
@@ -44,7 +44,7 @@ body {
     font-family: 'Trebuchet MS', sans-serif;
     text-align: center;
     font-size: 5vw;
-    padding: 70px;
+    padding: 10vw;
     line-height: 0.5vw;
 }
 
